--- a/techalert-report/index.html
+++ b/techalert-report/index.html
@@ -1,58 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Issue Report</title>
-    <link rel="stylesheet" href="./src/styles.css" />
-  </head>
-  <body>
-    <div class="container">
-      <form id="issueForm" class="issue-form">
-        <h1>Report Lab Issue</h1>
-        
-        <div class="form-group">
-          <label for="studentName">Student Name</label>
-          <input type="text" id="studentName" required>
-        </div>
 
-        <div class="form-group">
-          <label for="professorName">Professor Name</label>
-          <input type="text" id="professorName" required>
-        </div>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Cagayan State University</title>
+	<link rel="stylesheet" href="./src/styles.css">
+</head>
 
-        <div class="form-row">
-          <div class="form-group">
-            <label for="section">Section</label>
-            <input type="text" id="section" required>
-          </div>
+<body class="bg-gray-100 overscroll-none">
+	<div class="min-h-screen">
+		<!-- Header -->
+		<header class="bg-[#5C4033] p-4">
+			<div class="container mx-auto flex items-center gap-4 justify-center">
+				<img src="./static/CSU_cagayan.png" alt="University Logo"
+					class="w-16 h-16">
+				<h1 class="text-white text-2xl md:text-3xl font-semibold">Cagayan State University</h1>
+			</div>
+		</header>
 
-          <div class="form-group">
-            <label for="labName">Lab Name</label>
-            <input type="text" id="labName" required>
-          </div>
-        </div>
+		<!-- Main Form -->
+		<main class="container mx-auto p-4 md:p-8">
+			<div class="bg-white rounded-lg shadow-lg p-6 md:p-8">
+				<form class="grid md:grid-cols-2 gap-8">
+					<!-- Left Column - Input Fields -->
+					<div class="space-y-5">
+						<div class="grid md:grid-cols-2 gap-5">
+							<div>
+								<label for="first-name" class="block text-gray-700 font-semibold mb-2 text-sm">First
+									name</label>
+								<input class="w-full" type="text" id="first-name">
+							</div>
 
-        <div class="form-row">
-          <div class="form-group">
-            <label for="schoolYear">School Year</label>
-            <input type="number" id="schoolYear" required>
-          </div>
+							<div>
+								<label for="last-name" class="block text-gray-700 font-semibold mb-2 text-sm">Last
+									name</label>
+								<input class="w-full" type="text" id="last-name">
+							</div>
+						</div>
 
-          <div class="form-group">
-            <label for="pcNumber">PC Number</label>
-            <input type="number" id="pcNumber" required>
-          </div>
-        </div>
+						<div class="grid md:grid-cols-2">
+							<div>
+								<label for="year-section"
+									class="block text-gray-700 font-semibold mb-2 text-sm">Year/Section</label>
+								<input class="w-full" type="text" name="year-section" id="year-section">
+							</div>
+						</div>
 
-        <div class="form-group">
-          <label for="description">Description</label>
-          <textarea id="description" rows="4" required></textarea>
-        </div>
+						<div>
+							<label for="professor"
+								class="block text-gray-700 font-semibold mb-2 text-sm">Professor</label>
+							<input class="w-full" type="text" name="professor" id="professor">
+						</div>
 
-        <button type="submit">Submit Issue</button>
-      </form>
-    </div>
-    <script src="./src/main.ts" type="module"></script>
-  </body>
+						<div class="grid grid-cols-2 gap-5">
+							<div>
+								<label for="lab-room" class="block text-gray-700 font-semibold mb-2 text-sm">Laboratory
+									Room</label>
+								<select class="w-full" name="lab-room" id="lab-room">
+									<option value="cla">CLA</option>
+									<option value="clb">CLB</option>
+									<option value="clc">CLC</option>
+								</select>
+							</div>
+
+							<div>
+								<label for="pc-number" class="block text-gray-700 font-semibold mb-2 text-sm">PC
+									number</label>
+								<input type="number" name="pc-number" id="pc-number" class="h-[40px] w-full">
+							</div>
+						</div>
+					</div>
+
+					<!-- Right Column - Concern Textarea -->
+					<div class="flex flex-col gap-4">
+						<div>
+							<p class="block text-gray-700 font-semibold mb-2 text-sm">Issues</p>
+							<ul class="list-none grid grid-cols-2">
+								<label for="keyboard" class="flex items-center">
+									<input id="keyboard" type="checkbox">
+									<span class="ml-2">Keyboard</span>
+								</label>
+
+								<label for="mouse" class="flex items-center">
+									<input id="mouse" type="checkbox">
+									<span class="ml-2">Mouse</span>
+								</label>
+
+								<label for="monitor" class="flex items-center">
+									<input id="monitor" type="checkbox">
+									<span class="ml-2">Monitor</span>
+								</label>
+
+								<label for="monitor" class="flex items-center">
+									<input id="monitor" type="checkbox">
+									<span class="ml-2">Power supply</span>
+								</label>
+							</ul>
+						</div>
+
+						<textarea placeholder="Type your concern here."
+							class="w-full row-span-2 h-[200px] md:h-full p-4 border-[1.5px] border-green-600 rounded-lg resize-none focus:ring-2 focus:ring-green-500 focus:border-green-500"></textarea>
+					</div>
+				</form>
+
+				<div class="flex justify-end mt-4">
+					<button type="submit"
+						class="bg-green-700 text-white px-8 py-2 rounded-md hover:bg-green-800 transition-colors inline-flex items-center gap-2 text-center">
+						Send
+						<!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+							stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+							class="lucide lucide-send-horizontal">
+							<path
+								d="M3.714 3.048a.498.498 0 0 0-.683.627l2.843 7.627a2 2 0 0 1 0 1.396l-2.842 7.627a.498.498 0 0 0 .682.627l18-8.5a.5.5 0 0 0 0-.904z" />
+							<path d="M6 12h16" />
+						</svg> -->
+					</button>
+				</div>
+			</div>
+		</main>
+	</div>
+</body>
+
+<style>
+	input[type="text"],
+	input[type="number"] {
+		@apply border-[1.5px] border-gray-300 shadow-sm rounded-lg p-2 focus:outline-none focus:ring-[1.5px] focus:ring-green-500 focus:border-green-500
+	}
+
+	input[type="checkbox"] {
+		@apply w-4 h-4 text-green-600 border-gray-300 rounded focus:ring-blue-500 focus:ring-2
+	}
+
+	select {
+		@apply border-[1.5px] border-gray-300 shadow-sm rounded-lg p-2 focus:outline-none focus:ring-[1.5px] focus:ring-green-500 focus:border-green-500 bg-white
+	}
+</style>
+
 </html>
