--- a/techalert-report/index.html
+++ b/techalert-report/index.html
@@ -28,34 +28,33 @@
 							<div>
 								<label for="first-name" class="block text-gray-700 font-semibold mb-2 text-sm">First
 									name</label>
-								<input class="w-full" type="text" id="first-name">
+								<input required class="w-full" type="text" id="first-name">
 							</div>
 
 							<div>
 								<label for="last-name" class="block text-gray-700 font-semibold mb-2 text-sm">Last
 									name</label>
-								<input class="w-full" type="text" id="last-name">
+								<input required class="w-full" type="text" id="last-name">
 							</div>
 						</div>
 
 						<div class="grid md:grid-cols-2 gap-5">
 							<div>
-								<label for="year"
-									class="block text-gray-700 font-semibold mb-2 text-sm">Year</label>
-								<input class="w-full" type="number" name="year" id="year">
+								<label for="year" class="block text-gray-700 font-semibold mb-2 text-sm">Year</label>
+								<input required class="w-full" type="number" name="year" id="year">
 							</div>
 
 							<div>
 								<label for="section"
 									class="block text-gray-700 font-semibold mb-2 text-sm">Section</label>
-								<input class="w-full" type="text" name="section" id="section">
+								<input required class="w-full" type="text" name="section" id="section">
 							</div>
 						</div>
 
 						<div>
 							<label for="professor"
 								class="block text-gray-700 font-semibold mb-2 text-sm">Professor</label>
-							<input class="w-full" type="text" name="professor" id="professor">
+							<input required class="w-full" type="text" name="professor" id="professor">
 						</div>
 
 						<div class="grid grid-cols-2 gap-5">
@@ -72,7 +71,7 @@
 							<div>
 								<label for="pc-number" class="block text-gray-700 font-semibold mb-2 text-sm">PC
 									number</label>
-								<input type="number" name="pc-number" id="pc-number" class="h-[40px] w-full">
+								<input required type="number" name="pc-number" id="pc-number" class="h-[40px] w-full">
 							</div>
 						</div>
 					</div>
@@ -82,6 +81,7 @@
 						<div>
 							<p class="block text-gray-700 font-semibold mb-2 text-sm">Issues</p>
 							<ul class="list-none grid grid-cols-2">
+								<!-- TODO: Add guard for when non of the items are selected-->
 								<label for="keyboard" class="flex items-center">
 									<input id="keyboard" type="checkbox">
 									<span class="ml-2">Keyboard</span>
